--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,16 @@
 <body>
 <%= render 'layouts/header' %>
 <div class="container">
+  <div id="nav">
+    <%= t :language %>:
+    <%= link_to_unless_current t(:english), locale: "en" %>
+  </div>
+  <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <% end %>
   <%= yield %>
   <%= render 'layouts/footer' %>
+  <%= debug(params) if Rails.env.development? %>
 </div>
 </body>
 </html>
