--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,8 @@
 <div class="center jumbotron">
   <h1>Framgia E Learning System</h1>
-
   <h2>
-    This site is under construction.<br/>
-    If you are developer please make it quickly. If you are user please stay with us.
+    <%= t :construction_notice %>
   </h2>
-
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to t(:signup_prompt_text), signup_path, class: "btn btn-lg btn-primary" %>
 </div>
-<%= link_to image_tag("elogo.jpeg", alt: "Have Fun!!"),
-
-            'https://www.facebook.com/FramgiaBangladesh/?fref=ts' %>
+<%= link_to image_tag("elogo.jpeg", alt: "Have Fun!!"), 'https://www.facebook.com/FramgiaBangladesh/?fref=ts' %>
