--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,28 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "FELS", home_path, id: "logo" %>
+    <%= link_to t(:header_partial_sample_app_text), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", home_path %></li>
-        <li><%= link_to "Help", help_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to t(:header_partial_home_text), root_path %></li>
+        <li><%= link_to t(:header_partial_help_text), help_path %></li>
+        <% if logged_in? %>
+            <li><%= link_to "Users", '#' %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <%= t :header_partial_dropdown_header_text %> <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to t(:header_partial_profile_text), current_user %></li>
+                <li><%= link_to t(:header_partial_setting_text), '#' %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to t(:header_partial_logout_text), logout_path, method: "delete" %>
+                </li>
+              </ul>
+            </li>
+        <% else %>
+            <li><%= link_to t(:header_partial_login_text), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
