Committed in the 45385_45386_Login_using_remember_me

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,8 @@
   <h2>
     <%= t :construction_notice %>
   </h2>
-  <%= link_to t(:signup_prompt_text), signup_path, class: "btn btn-lg btn-primary" %>
+  <% if !logged_in? %>
+    <%= link_to t(:signup_prompt_text), signup_path, class: "btn btn-lg btn-primary" %>
+  <% end %>
 </div>
-<%= link_to image_tag("elogo.jpeg", alt: "Have Fun!!"), 'https://www.facebook.com/FramgiaBangladesh/?fref=ts' %>
+<%= link_to image_tag("elogo.jpeg", alt: "Have fun!!"), 'https://www.facebook.com/FramgiaBangladesh/?fref=ts' %>
