--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
   <h1>Framgia E Learning System</h1>
   <h2>
-    <%= t :construction_notice %>
+    <%= t(:construction_notice) %>
   </h2>
   <% if !logged_in? %>
     <%= link_to t(:signup_prompt_text), signup_path, class: "btn btn-lg btn-primary" %>
