--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="footer">
   <small>
-    <%= link_to('Farmgia Bangladesh Limited', 'https://www.facebook.com/FramgiaBangladesh/?fref=ts', target: :blank) %>
+    <%= link_to( t(:footer_framgia_name_text) , 'https://www.facebook.com/FramgiaBangladesh/?fref=ts', target: :blank) %>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
+      <li><%= link_to t(:footer_partial_about_text), about_path %></li>
+      <li><%= link_to t(:footer_contact_partial_text), contact_path %></li>
     </ul>
   </nav>
 </footer>
