--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,14 @@
         <li><%= link_to t(:header_partial_home_text), root_path %></li>
         <li><%= link_to t(:header_partial_help_text), help_path %></li>
         <% if logged_in? %>
-            <li><%= link_to "Users", '#' %></li>
+            <li><%= link_to t(:header_partial_all_user_text), users_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <%= t :header_partial_dropdown_header_text %> <b class="caret"></b>
+                Account <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to t(:header_partial_profile_text), current_user %></li>
-                <li><%= link_to t(:header_partial_setting_text), '#' %></li>
+                <li><%= link_to t(:header_partial_setting_text), edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
                   <%= link_to t(:header_partial_logout_text), logout_path, method: "delete" %>
